11712406-project2/test/test_11712406_6.out
Error type 10 at Line 4: indexing on non-array variable
Error type 8 at Line 4: incompatible return type